# heat_raster

heat_ros/: CMakeLists.txt  package.xml
heat_ros/include/heat_ros/: heat_method_tool_path_planner.h  heat_method_tool_path_planner_widget.h
heat_ros/src/: heat_method_tool_path_planner.cpp  heat_method_tool_path_planner_widget.cpp  plugins.cpp
