<?xml version="1.0"?>
<package format="2">
  <name>heat_ros</name>
  <version>0.0.0</version>
  <description>The heat_ros package</description>

  <maintainer email="clewis@todo.todo">clewis</maintainer>

  <license>TODO</license>

  <depend>libgeodesic</depend>
  <depend>noether_tpp</depend>
  <depend>noether_gui</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
